[gd_scene load_steps=17 format=1]

[ext_resource path="res://cooker/Game.gd" type="Script" id=1]
[ext_resource path="res://cooker/tilesets/Mines.tres" type="TileSet" id=2]
[ext_resource path="res://cooker/Grid.gd" type="Script" id=3]
[ext_resource path="res://cooker/GridVisualizer.gd" type="Script" id=4]
[ext_resource path="res://cooker/fail.png" type="Texture" id=5]
[ext_resource path="res://cooker/success.png" type="Texture" id=6]
[ext_resource path="res://cooker/palette.tscn" type="PackedScene" id=7]
[ext_resource path="res://cooker/list.tscn" type="PackedScene" id=8]
[ext_resource path="res://cooker/question.tscn" type="PackedScene" id=9]
[ext_resource path="res://cooker/small/half_resized.png" type="Texture" id=10]
[ext_resource path="res://cooker/small/number_resized.png" type="Texture" id=11]
[ext_resource path="res://cooker/small/Obstacle_resized.png" type="Texture" id=12]
[ext_resource path="res://cooker/small/Obstacle_1_resized.png" type="Texture" id=13]
[ext_resource path="res://cooker/small/Obstacle_3_resized.png" type="Texture" id=14]
[ext_resource path="res://cooker/small/Obstacle_4_resized.png" type="Texture" id=15]
[ext_resource path="res://cooker/small/update-arrow_resized.png" type="Texture" id=16]

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="Grid" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 65, 65 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -655337, 0 )
script/script = ExtResource( 3 )

[node name="GridVisualizer" type="Node2D" parent="Grid"]

script/script = ExtResource( 4 )

[node name="fail" type="Sprite" parent="Grid"]

visibility/visible = false
transform/pos = Vector2( 435, 221 )
texture = ExtResource( 5 )

[node name="success" type="Sprite" parent="Grid"]

visibility/visible = false
transform/pos = Vector2( 446, 228 )
texture = ExtResource( 6 )

[node name="palette" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 1015.54, 192.257 )

[node name="commands" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 604.0
margin/right = 1171.0
margin/bottom = 644.0
alignment = 0

[node name="list" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 1049.81, 103.219 )

[node name="question" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( 1127.27, 370.275 )

[node name="half" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 672.0
margin/top = 672.0
margin/right = 714.0
margin/bottom = 708.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 10 )
flat = true

[node name="number" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 727.0
margin/top = 676.0
margin/right = 766.0
margin/bottom = 709.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 11 )
flat = true

[node name="Obstacle" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 782.0
margin/top = 681.0
margin/right = 825.0
margin/bottom = 701.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 12 )
flat = true

[node name="Obstacle_1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 856.0
margin/top = 669.0
margin/right = 902.0
margin/bottom = 709.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 13 )
flat = true

[node name="Obstacle_3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 943.0
margin/top = 675.0
margin/right = 985.0
margin/bottom = 711.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 14 )
flat = true

[node name="Obstacle_4" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1023.0
margin/top = 676.0
margin/right = 1065.0
margin/bottom = 712.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 15 )
flat = true

[node name="Obstacle_2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1114.0
margin/top = 673.0
margin/right = 1152.0
margin/bottom = 705.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 16 )
flat = true


